[gd_scene format=3 uid="uid://cscjxidxmqwtl"]

[ext_resource type="Script" uid="uid://bkvqay5t1pd2c" path="res://ui/menu.gd" id="1_2ot4n"]
[ext_resource type="Texture2D" uid="uid://c7xghjttrafmn" path="res://ui/menu-background.png" id="1_4c782"]
[ext_resource type="Texture2D" uid="uid://kive7flvhu6h" path="res://ui/menu-logo.png" id="2_2ot4n"]
[ext_resource type="PackedScene" uid="uid://dbhvcbu07sbvv" path="res://levels/level_2.tscn" id="2_jbsda"]
[ext_resource type="Texture2D" uid="uid://bmk3fm1d70i03" path="res://ui/menu-possum.png" id="3_fcydj"]
[ext_resource type="Theme" uid="uid://cylhj728sm3tn" path="res://ui/user_interface_theme.tres" id="5_jbsda"]

[node name="Control" type="Control" unique_id=1523002401]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ot4n")
level = ExtResource("2_jbsda")

[node name="Background" type="TextureRect" parent="." unique_id=1750330340]
modulate = Color(0.7357967, 0.7357967, 0.7357967, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4c782")
expand_mode = 2
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=287797467]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -170.5
offset_right = -14.5
offset_bottom = 170.5
grow_horizontal = 2
grow_vertical = 2

[node name="Logo" type="TextureRect" parent="VBoxContainer" unique_id=1132244693]
layout_mode = 2
texture = ExtResource("2_2ot4n")
expand_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer" unique_id=1931720838]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="PlayButton" type="Button" parent="VBoxContainer/VBoxContainer" unique_id=799477067]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("5_jbsda")
text = "Play"

[node name="VolumeLabel" type="Label" parent="VBoxContainer/VBoxContainer" unique_id=1349959520]
unique_name_in_owner = true
layout_mode = 2
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/VBoxContainer" unique_id=2138076408]
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer" unique_id=389723697]
layout_mode = 2
text = "Quit"

[node name="Possum" type="TextureRect" parent="." unique_id=1999664856]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 17.0
offset_top = -210.0
offset_right = 332.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_fcydj")
expand_mode = 3
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
